<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.kie.kogito</groupId>
    <artifactId>kogito-build-parent</artifactId>
    <version>2.0.0-SNAPSHOT</version>
  </parent>
  <artifactId>kogito-apps</artifactId>
  <packaging>pom</packaging>

  <name>Kogito Apps</name>
  <description>Kogito Apps</description>

  <properties>
    <version.frontend.plugin>1.9.1</version.frontend.plugin>
    <version.node>v12.16.2</version.node>
    <version.npm>6.10.3</version.npm>
    <version.yarn>v1.19.1</version.yarn>
    <maven.compiler.release>11</maven.compiler.release>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>

    <!-- external containers used for testing -->
    <container.image.infinispan>quay.io/infinispan/server:${version.org.infinispan}</container.image.infinispan>
    <container.image.redis>redislabs/redisearch:${version.org.redis}</container.image.redis>
    <!-- internal containers used for testing (built by maven using quarkus-container-image-jib) -->
    <container.image.explainability-service-messaging>org.kie.kogito/explainability-service-messaging:${project.version}</container.image.explainability-service-messaging>
    <container.image.jobs-service>org.kie.kogito/jobs-service:${project.version}</container.image.jobs-service>
    <container.image.data-index-service-infinispan>org.kie.kogito/data-index-service-infinispan:${project.version}</container.image.data-index-service-infinispan>
    <container.image.data-index-service-mongodb>org.kie.kogito/data-index-service-mongodb:${project.version}</container.image.data-index-service-mongodb>
    <container.image.trusty-service-infinispan>org.kie.kogito/trusty-service-infinispan:${project.version}</container.image.trusty-service-infinispan>
    <container.image.trusty-service>org.kie.kogito/trusty-service:${project.version}</container.image.trusty-service>

    <!-- OptaPlanner version -->
    <version.org.optaplanner>8.6.0-SNAPSHOT</version.org.optaplanner>
    <version.org.apache.commons.csv>1.8</version.org.apache.commons.csv>

    <version.org.jredisearch>2.0.0</version.org.jredisearch>
  </properties>

  <repositories>
    <!-- Bootstrap repository to locate the parent pom when the parent pom has not been build locally. -->
    <repository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>https://repository.jboss.org/nexus/content/groups/public/</url>
      <layout>default</layout>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>never</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.github.eirslett</groupId>
          <artifactId>frontend-maven-plugin</artifactId>
          <version>${version.frontend.plugin}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.kie.kogito</groupId>
        <artifactId>kogito-bom</artifactId>
        <version>${project.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${version.io.quarkus}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.kie.kogito</groupId>
        <artifactId>kogito-apps-ui-packages</artifactId>
        <version>${project.version}</version>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>org.optaplanner</groupId>
        <artifactId>optaplanner-bom</artifactId>
        <version>${version.org.optaplanner}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>com.redislabs</groupId>
        <artifactId>jredisearch</artifactId>
        <version>${version.org.jredisearch}</version>
      </dependency>
      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>testcontainers</artifactId>
        <version>${version.org.testcontainers}</version>
      </dependency>
      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>kafka</artifactId>
        <version>${version.org.testcontainers}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-csv</artifactId>
        <version>${version.commons-csv}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <profiles>
    <profile>
      <id>default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <modules>
        <module>persistence-commons</module>
        <module>jobs-service</module>
        <module>data-index</module>
        <module>ui-packages</module>
        <module>security-commons</module>
        <module>management-console</module>
        <module>trusty-ui</module>
        <module>task-console</module>
        <module>explainability</module>
        <module>trusty</module>
        <module>task-assigning</module>
        <module>jitexecutor</module>
        <module>apps-integration-tests</module>
      </modules>
    </profile>
    <profile>
      <id>native</id>
      <activation>
        <property>
          <name>native</name>
        </property>
      </activation>
      <modules>
        <module>persistence-commons</module>
        <module>jobs-service</module>
        <module>ui-packages</module>
        <module>security-commons</module>
        <module>management-console</module>
        <module>trusty-ui</module>
        <module>task-console</module>
        <module>explainability</module>
        <module>trusty</module>
        <module>task-assigning</module>
        <module>jitexecutor</module>
      </modules>
    </profile>
  </profiles>
</project>
